# check-beast

./: CMakeLists.txt
cmake/: RequireBoost.cmake
decorator/: CMakeLists.txt  main.cpp
